# larsim

./: CMakeLists.txt  altCMakeLists.cmake
DetSim/: CMakeLists.txt  SimWireT962_module.cc  SimWire_module.cc  WienerFilterAna_module.cc  altCMakeLists.cmake  detsimmodules.fcl
EventGenerator/: CMakeLists.txt  LightSource_module.cc  NDKGen_module.cc  altCMakeLists.cmake  csu40L_buildopticallibrary.fcl  csu40L_fastoptical.fcl  csu40L_fulloptical.fcl  lightsource.fcl  prodsingle_buildopticallibrary.fcl  prodsingle_fastoptical.fcl  prodsingle_fulloptical.fcl
EventGenerator/CORSIKA/: CMakeLists.txt
EventGenerator/CRY/: CMakeLists.txt  altCMakeLists.cmake
EventGenerator/GENIE/: CMakeLists.txt  altCMakeLists.cmake
EventGenerator/MuonPropagation/: CMakeLists.txt
LArG4/: AuxDetReadout.cxx  CMakeLists.txt  FastOpticalPhysics.cxx  FastOpticalPhysics.h  G4BadIdeaAction.cxx  G4BadIdeaAction.h  ISCalculationSeparate.cxx  IonizationAndScintillation.cxx  IonizationAndScintillation.h  LArG4Ana_module.cc  LArG4_module.cc  LArSimChannelAna_module.cc  LArStackingAction.cxx  LArStackingAction.h  LArVoxelReadout.cxx  LArVoxelReadout.h  LArVoxelReadoutbackup1808  LaRLightEnergyAction.cxx  LaRLightEnergyAction.h  MaterialPropertyLoader.cxx  MaterialPropertyLoader.h  OpDetLookup.cxx  OpDetLookup.h  OpDetReadoutGeometry.cxx  OpDetReadoutGeometrybackup281015  OpDetSensitiveDetector.cxx  OpFastScintillation.cxx  OpFastScintillation.hh  OpParamAction.cxx  OpParamSD.cxx  OpticalPhysics.cxx  ParticleListAction.cxx  ParticleListAction.h  altCMakeLists.cmake  largeantmodules.fcl  largeantmodules.fcl~  largeantmodules_lariat.fcl  largeantmodules_lariat.fcl~  lariattest_buildopticallibrary.fcl
MCCheater/: BackTracker.h  BackTracker_service.cc  CMakeLists.txt  altCMakeLists.cmake
MCSTReco/: CMakeLists.txt  MCRecoEdep.cxx  MCRecoEdep.h  MCRecoPart.cxx  MCRecoPart.h  MCShowerRecoAlg.cxx  MCShowerRecoAlg.h  MCTrackRecoAlg.cxx  MCTrackRecoAlg.h  altCMakeLists.cmake
MCSTReco/job/: CMakeLists.txt  altCMakeLists.cmake  sample_gen.fcl
Modules/: larsimConfig.cmake.in
PhotonPropagation/: CMakeLists.txt  PhotonLibrary.cxx  PhotonLibrary.h  PhotonLibraryAnalyzer_module.cc  PhotonLibrarybackup1808  PhotonVisibilityService.h  PhotonVisibilityService_service.cc  PhotonVisibilityServicebackup1808  altCMakeLists.cmake  photpropservices.fcl  photpropservices.fcl~  prodsingle_libraryana.fcl
PhotonPropagation/LibraryBuildTools/: CMakeLists.txt  prodsingle_buildopticallibrary.fcl
SimFilters/: CMakeLists.txt  altCMakeLists.cmake
Simulation/: CMakeLists.txt  LArG4Parameters.h  LArG4Parameters_service.cc  SimChannel.cxx  SimListUtils.cxx  SimPhotons.h  altCMakeLists.cmake  classes_def.xml  optical_library_grid.sh  simulationservices.fcl  simulationservicesbackup1808
TriggerAlgo/: CMakeLists.txt  altCMakeLists.cmake
cmakeConfig/: larsim-fragment.cmake.in
larsim/: #CMakeLists.txt#  CMakeLists.txt
larsim/DetSim/: CMakeLists.txt  CMakeLists.txt~  SimDriftElectrons_module.cc  SimWireAna_module.cc  SimWireT962_module.cc  (+5 more)
larsim/EventGenerator/: CMakeLists.txt  FileMuons_module.cc  LightSource_module.cc  NDKGen_module.cc  NUANCEGen_module.cc  ProtoDUNEBeam_module.cc  RadioGenAna.fcl  RadioGenAna_module.cc  RadioGen_module.cc  SingleGen_module.cc  csu40L_buildopticallibrary.fcl  csu40L_buildopticallibrary.fcl~  csu40L_fastoptical.fcl  csu40L_fastoptical.fcl~  csu40L_fulloptical.fcl  csu40L_fulloptical.fcl~  lightsource.fcl  prodsingle_buildopticallibrary.fcl  prodsingle_buildopticallibrary.fcl~  prodsingle_fastoptical.fcl  prodsingle_fastoptical.fcl~  prodsingle_fulloptical.fcl  prodsingle_fulloptical.fcl~  protodunebeam.fcl  run_RadioGenAna.fcl
larsim/EventGenerator/CORSIKA/: CMakeLists.txt  CORSIKAGen_module.cc
larsim/EventGenerator/CRY/: CMakeLists.txt  CosmicsGen_module.cc
larsim/EventGenerator/GENIE/: CMakeLists.txt  GENIEGen_module.cc  NeutronOsc_module.cc  NucleonDecay_module.cc  genie_v3.fcl
larsim/EventGenerator/HSNGEN/: CMakeLists.txt  HSNGen_module.cc  channel.cxx  channel.h  detector.cxx  detector.h  inflight.cxx  sterile_flux.cxx  sterile_flux.h
larsim/EventGenerator/HeavySterileNeutrino/: CMakeLists.txt  HSNGen_module.cc  dump  prodhsn.fcl
larsim/EventGenerator/HeavySterileNeutrino/DataObjects/: Channel.cxx  Flux.cxx
larsim/EventGenerator/HeavySterileNeutrino/Helpers/: Helper.cxx  Helper.h  Settings.h
larsim/EventGenerator/HeavySterileNeutrino/Test/: CMakeLists.txt  Test.cxx  Test.h
larsim/EventGenerator/MARLEY/: ActiveVolumeVertexSampler.cxx  ActiveVolumeVertexSampler.h  CMakeLists.txt  MARLEYFileGen_module.cc  MARLEYGen_module.cc  MARLEYHelper.cxx  MARLEYHelper.h  MARLEYTimeGen_module.cc  prodmarley.fcl  prodmarley_lariat.fcl  prodmarley_microboone.fcl  prodmarleyfile.fcl
larsim/EventGenerator/MuonPropagation/: CMakeLists.txt  GaisserParam_module.cc  MUSUN_module.cc
larsim/EventGenerator/NuWro/: NuWroGen_module.cc
larsim/MCSTReco/: CMakeLists.txt  CMakeLists.txt~  MCRecoEdep.cxx  MCRecoEdep.cxx~  MCRecoPart.h~  MCShowerRecoAlg.h~  MCShowerRecoPart.cxx  MCTrackRecoAlg.cxx  MCTrackRecoAlg.h~  TextOutAna.fcl  TextOutAna_module.cc  TextOutAna_module.cc~
larsim/MCSTReco/job/: CMakeLists.txt  mcreco.fcl  sample_gen.fcl  sample_gen.fcl~
larsim/PhotonPropagation/: CMakeLists.txt  CMakeLists.txt~  CreateDenseLibrary_module.cc  PhotonLibrary.cxx  PhotonLibrary.h  PhotonLibraryAnalyzer_module.cc  PhotonLibraryAnalyzer_module.cc~  PhotonLibraryPropagationS2_module.cc  PhotonLibraryPropagation_module.cc  PhotonVisibilityService.h  PhotonVisibilityServiceS2.h  PhotonVisibilityServiceS2_service.cc  PhotonVisibilityService_service.cc  PhotonVisibilityService_service.cc~  createhybridlibraryjob.fcl  photpropmodules.fcl  photpropservices.fcl  prodsingle_libraryana.fcl  prodsingle_libraryana.fcl~
larsim/PhotonPropagation/LibraryBuildTools/: prodsingle_buildopticallibrary.fcl  prodsingle_buildopticallibrary.fcl~
larsim/PhotonPropagation/LibraryMappingTools/: CMakeLists.txt
larsim/PhotonPropagation/ScintTimeTools/: CMakeLists.txt
ups/: CMakeLists.txt  product_deps  product_deps~
(+163 files in other folders)
